tests/ui/union_type.stderr
error: repr_cast can only be applied to enums
 --> tests/ui/union_type.rs:4:1
  |
4 | / union MyUnion {
5 | |     x: u32,
6 | |     y: f32,
7 | | }
  | |_^
